# filesystem-proxy-server

./: .clang-format  .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/core/: dispatcher.cpp  dispatcher.h  server.cpp  server.h  session.cpp  session.h  sessionmanager.cpp  sessionmanager.h
src/handlers/: clienthandler.cpp  clienthandler.h  clientrequesthandler.cpp  clientrequesthandler.h  ihandler.h
src/models/: client.h  clientcontext.h  clientinput.h  clientmetadata.h  clientpayload.h  subscriber.h
src/network/: constants.h  headerdraft.h  headerpackage.h  iclientconnection.h  operationexception.h  protocol.cpp  protocol.h  protocoltypes.h  requesttype.h  serialization.h
src/network/tcp/: acceptor.cpp  acceptor.h  socket.cpp  socket.h
src/services/: clientactivator.cpp  clientactivator.h  clientmapper.cpp  clientmapper.h  clientregistry.h  clientsubscriptionsmanager.cpp  clientsubscriptionsmanager.h  iclientregisterobserver.h  idgenerator.cpp  idgenerator.h
src/utils/: colors.h  datetimeprovider.h  logger.h
